--- a/main3.css
+++ b/main3.css
@@ -15,7 +15,8 @@ body{
     overflow-x: hidden;
 }
 .nav,.one, .two, .three,.four,footer{
-    padding-inline: 7rem;
+    padding-left: 7rem;
+    padding-right: 7rem;
 }
 .nav{
     display: flex;
@@ -51,7 +52,8 @@ body{
     color: white;
     padding-top: 10px;
     padding-bottom: 0rem;
-    padding-inline: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
     margin: 0;
     border-bottom-right-radius: 15px;
 }
@@ -289,7 +291,8 @@ footer div{
         display: none;
     }
     .nav,.one, .two, .three,.four,footer{
-        padding-inline: 2rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
     .one{
         flex-direction: column;
@@ -363,7 +366,7 @@ footer div{
         gap: 1.5rem;
     }
 }
-@media (max-width:1200px){
+@media (max-width:1200px) and (min-width:762px){
     .one{
         flex-direction: column;
         text-align: center;
