--- a/main3.css
+++ b/main3.css
@@ -286,6 +286,9 @@ footer div{
 @media (max-width:760px){
     .nav{
         padding-bottom: 1rem;
+        gap: 0;
+        width: 100%;
+        background-color: #585858;
     }
     .navA{
         display: none;
@@ -294,15 +297,25 @@ footer div{
         padding-left: 1rem;
         padding-right: 1rem;
     }
+    .nav img{
+        padding-left: 2rem;
+    }
+    .nav ul{
+        display: flex;
+        list-style: none;
+        gap: 2rem;
+        padding-right: 1rem;
+    }
     #hire{
         background-color: #e7332b;
         color: white;
         padding-top: 10px;
         padding-bottom: 10px;
-        padding-left: 40px;
-        padding-right: 40px;
-        margin-left: 50px;
+        padding-left: 20px;
+        padding-right: 20px;
+        margin-left: auto;
         border-bottom-right-radius: 15px;
+
     }
     .one{
         flex-direction: column;
@@ -311,8 +324,13 @@ footer div{
     }
     .one header{
         gap: 2rem;
-        width: 85%;
+        width: 100%;
         align-items: center;
+    }
+    .one button{
+        padding: 8px 15px;
+        font-size: 16px;
+        border-bottom-right-radius: 15px;
     }
     .one img{
         width: 300px;
@@ -367,6 +385,17 @@ footer div{
     }
     .four_bottom div{
         width: 100%;
+    }
+    .buttons{
+        display: flex;
+        gap: 1rem;
+        justify-content: center;
+        margin-top: 4rem;
+    }
+    .buttons button{
+        padding: 8px 15px;
+        font-size: 16px;
+        border-bottom-right-radius: 15px;
     }
 
     footer div{
